template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $(name)
  namespace: $(namespace)
  labels:
    app: $(name)
spec:
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: $(replicas)
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: $(name)
  template:
    metadata:
      labels:
        app: $(name)
        type: service # 项目的日志分析ELK使用到了这个，用于分类
    spec:
      containers:
        - name: $(name)
          image: $(image)
          imagePullPolicy: IfNotPresent
          #securityContext:
            #readOnlyRootFilesystem: true
            #runAsNonRoot: true
          lifecycle:
            preStop:
              exec:
                command: [ "sh","-c","sleep 5" ]
          ports: $(ports)
          resources: $(resources)
          volumeMounts: $(volumemounts)
      volumes:  $(volumes)
