template/service-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: $(name)-svc
  namespace: $(namespace)
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  ports:
    - name: tcp-long-connection-port
      port: $(ports.network.port)
      targetPort: $(ports.network.targetport)
      protocol: TCP
  selector:
    app: $(name)
