template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $(name)-svc
  namespace: $(namespace)
spec:
  ports:
    - port: $(ports.0.port)
  selector:
    app: $(name)
